--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "name": "monsters-rolodex",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://hashelse.github.io/monsters-rolodex",
+  "homepage": "https://nidhishdb.github.io/monsters-rolodex",
   "dependencies": {
     "gh-pages": "^2.1.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "react-scripts": "3.1.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
